<resources>
    <string name="app_name">SORTEE</string>
    <string name="title">SORTEE</string>
    <string name="start">START</string>
    <string name="bub">Bubble sort</string>
    <string name="quick">Quick sort</string>
    <string name="select">Selection sort</string>
    <string name="merge">Merge sort</string>
    <string name="in">Insertion sort</string>
    <string name="size">Size</string>
    <string name="input">Input</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="sort">Sort</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>



</resources>