<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third"
    android:background="@color/black">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/size"
        android:textColorHint="#0D4B53"
        android:background="#E82EF4B6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="180dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="number"
            android:background="#E82EF4B6" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textInputLayout1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/input"
        android:textColorHint="#0D4B53"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="180dp"
        android:background="#E82EF4B6"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="25sp"
            android:inputType="number"
            android:background="#E82EF4B6"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:fontFamily="@font/merriweather_black_italic"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn7"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:fontFamily="@font/merriweather_black_italic"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn8"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:fontFamily="@font/merriweather_black_italic"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/sort"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.945" />

    <ToggleButton
        android:id="@+id/toggleButton2"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom"
        android:fontFamily="@font/merriweather_black_italic"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textOff="@string/pause"
        android:textOn="@string/play"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />


</androidx.constraintlayout.widget.ConstraintLayout>